@@ -14,7 +14,7 @@ import minicraft.network.Analytics;
 import minicraft.screen.AchievementsDisplay;
 
 public class AirWizard extends EnemyMob {
-	private static MobSprite[][][] sprites;
+	private static final MobSprite[][][] sprites;
 	static {
 		sprites = new MobSprite[2][4][2];
 		for (int i = 0; i < 2; i++) {
@@ -25,35 +25,19 @@ public class AirWizard extends EnemyMob {
 
 	public static boolean beaten = false;
 
-	public boolean secondform;
 	private int attackDelay = 0;
 	private int attackTime = 0;
 	private int attackType = 0;
 
 	/**
-	 * Constructor for the AirWizard. Will spawn as secondary form if lvl>1.
-	 * @param lvl The AirWizard level.
-	 */
-	public AirWizard(int lvl) {
-		this(lvl > 1);
-	}
-
-	/**
 	 * Constructor for the AirWizard.
-	 * @param secondform determines if the wizard should be level 2 or 1.
 	 */
-	public AirWizard(boolean secondform) {
-		super(secondform ? 2 : 1, sprites, secondform ? 5000 : 2000, false, 16 * 8, -1, 10, 50);
+	public AirWizard() {
+		super(1, sprites, 2000, false, 16 * 8, -1, 10, 50);
 
-		this.secondform = secondform;
-		if (secondform) speed = 3;
-		else speed = 2;
+		speed = 2;
 		walkTime = 2;
 	}
-
-	public boolean canSwim() { return secondform; }
-
-	public boolean canWool() { return false; }
 
 	@Override
 	public void tick() {
@@ -75,7 +59,7 @@ public class AirWizard extends EnemyMob {
 				//attackType = 0; // Attack type is set to 0, as the default.
 				if (health < maxHealth / 2) attackType = 1; // If at 1000 health (50%) or lower, attackType = 1
 				if (health < maxHealth / 10) attackType = 2; // If at 200 health (10%) or lower, attackType = 2
-				attackTime = 60 * (secondform ? 3 : 2); // attackTime set to 120 or 180 (2 or 3 seconds, at default 60 ticks/sec)
+				attackTime = 120; // attackTime set to 120 (2 seconds, at default 60 ticks/sec)
 			}
 			return; // Skips the rest of the code (attackDelay must have been > 0)
 		}
@@ -85,7 +69,7 @@ public class AirWizard extends EnemyMob {
 			xmov = ymov = 0;
 			attackTime *= 0.92; // attackTime will decrease by 7% every time.
 			double dir = attackTime * 0.25 * (attackTime % 2 * 2 - 1); // Assigns a local direction variable from the attack time.
-			double speed = (secondform ? 1.2 : 0.7) + attackType * 0.2; // speed is dependent on the attackType. (higher attackType, faster speeds)
+			double speed = 0.7 + attackType * 0.2; // speed is dependent on the attackType. (higher attackType, faster speeds)
 			level.add(new Spark(this, Math.cos(dir) * speed, Math.sin(dir) * speed)); // Adds a spark entity with the cosine and sine of dir times speed.
 			return; // Skips the rest of the code (attackTime was > 0; ie we're attacking.)
 		}
@@ -158,42 +142,39 @@ public class AirWizard extends EnemyMob {
 	@Override
 	protected void touchedBy(Entity entity) {
 		if (entity instanceof Player) {
-			// If the entity is the Player, then deal them 1 or 2 damage points.
-			((Player)entity).hurt(this, (secondform ? 2 : 1));
+			// If the entity is the Player, then deal them 1 damage points.
+			((Player)entity).hurt(this, 1);
 		}
 	}
 
 	/** What happens when the air wizard dies */
+	@Override
 	public void die() {
 		Player[] players = level.getPlayers();
 		if (players.length > 0) { // If the player is still here
 			for (Player p: players)
-				 p.addScore((secondform ? 500000 : 100000)); // Give the player 100K or 500K points.
+				 p.addScore(100000); // Give the player 100K points.
 		}
 
-		Sound.bossDeath.play(); // Play boss-death sound.
+		Sound.bossDeath.play();
 
-		if(!secondform) {
-			Analytics.AirWizardDeath.ping();
-			Updater.notifyAll("Air Wizard: Defeated!");
+		Analytics.AirWizardDeath.ping();
+		Updater.notifyAll("Air Wizard Defeated!");
 
-			// Achievement:
+
+		// If this is the first time we beat the air wizard.
+		if (!beaten) {
 			AchievementsDisplay.setAchievement("minicraft.achievement.airwizard", true);
-			if (!beaten) {
-				Analytics.FirstAirWizardDeath.ping();
-				Updater.notifyAll("The Dungeon is now open!", -400);
-			}
-			beaten = true;
-		} else {
-			Analytics.AirWizardIIDeath.ping();
-			Updater.notifyAll("Air Wizard II: Defeated!");
 
-			// TODO: Remove second Air Wizard.
-			AchievementsDisplay.setAchievement("minicraft.achievement.second_airwizard", true);
+			Analytics.FirstAirWizardDeath.ping();
+			Updater.notifyAll("The Dungeon is now open!", -400);
 		}
+
+		beaten = true;
 
 		super.die(); // Calls the die() method in EnemyMob.java
 	}
 
+	@Override
 	public int getMaxLevel() { return 2; }
 }
