@@ -29,6 +29,8 @@ Minicraft+ version 2.1.0
 * Saplings should no longer grow if an entity is on it
 * Changed texture packs into resource packs
 * You can now mine cloud cactus
+- Removed suits
+- Removed second air wizard
 
 Minicraft+ version 2.0.7
 
